--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <title>tkg.haiiro.io</title>
     <script src="build.js"></script>
   </head>
   <body>
